created new foot items in the second navigation section with user needed food discriptions and relevant resized images with functional add to cart buttons

--- a/index.html
+++ b/index.html
@@ -109,6 +109,69 @@
 
                     <div id="" class="menu">
 
+                      <div class="cardItems">
+
+                        <div id="menu_item" class="menu_item">
+                          <div class="food_item">
+                            <img src="images/spaghettibolognese.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <span class="food-details card_component">
+                              <span class="foodname foodtitle">Spaghetti Alla Bolognese</span><br><br>Traditional slow
+                              braised Ragu of Beef, Soffritto, tomatoes, and herbs<br>
+                              <strong>Available for delivery and Pick up</strong><br><br>
+                              <span class="foodprice card_component">$19.00</span><br>
+                            </span>
+                            <div class="cardBar cardItem card_component">
+                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div id="menu_item" class="menu_item">
+                          <div class="food_item">
+                            <img src="images/spaghetticarbonara.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <span class="food-details card_component">
+                              <span class="foodname foodtitle">Spaghetti Alla Carbonara</span><br><br>Creamy sauce of Bacon, Egg and Cheese.<br>
+                              <strong>Available for delivery and Pick up</strong><br><br>
+                              <span class="foodprice card_component">$22.00</span><br>
+                            </span>
+                            <div class="cardBar cardItem card_component">
+                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div id="menu_item" class="menu_item">
+                          <div class="food_item">
+                            <img src="images/ravioli.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <span class="food-details card_component">
+                              <span class="foodname foodtitle">Ravioli</span><br><br>Pillows of meat filled with pasta topped
+                               with our house-made Napoli, cream and Parmesan sauce.<br>
+                              <strong>Available for delivery and Pick up only</strong><br><br>
+                              <span class="foodprice card_component">$22.00</span><br>
+                            </span>
+                            <div class="cardBar cardItem card_component">
+                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div id="menu_item" class="menu_item">
+                          <div class="food_item">
+                            <img src="images/lasangne.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <span class="food-details card_component">
+                              <span class="foodname foodtitle">Lasagne</span><br><br>Traditional Italian dish of stacked layers of pasta alternated with our rich Beef Ragu,
+                               Bechamel sauce and Cheeses served with our a Garden Salad.<br>
+                              <strong>Available for delivery and Pick up</strong><br><br>
+                              <span class="foodprice card_component">$25.00</span><br>
+                            </span>
+                            <div class="cardBar cardItem card_component">
+                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                            </div>
+                          </div>
+                        </div>
+
+                      </div>
+
                     </div>
                 </section>
 
