--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -66,7 +66,7 @@
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -80,7 +80,7 @@
                               <span class="foodprice card_component">$20.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -94,7 +94,7 @@
                               <span class="foodprice card_component">$24.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -121,7 +121,7 @@
                               <span class="foodprice card_component">$19.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -135,7 +135,7 @@
                               <span class="foodprice card_component">$22.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -150,7 +150,7 @@
                               <span class="foodprice card_component">$22.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -165,7 +165,7 @@
                               <span class="foodprice card_component">$25.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -211,14 +211,14 @@
 
                   <div class="cart_summary">
                     <h2 class="cart-main-heading">CART</h2>
-                    <button id="view_cart" class="button1 view_cart">View Cart</button>
+                    <button id="view_cart" class="button1">View/Hide Cart</button>
                   </div>
 
                   <div id="cart_contents" class="cart_contents">
                     <div class="addtocart-row">
                       <span class="item-addtocart cart-heading addtocart-column">Item</span>
                       <span class="price-addtocart cart-heading addtocart-column">Price</span>
-                      <span class="quantity-addtocart cart-heading addtocart-column">Quantity</span>
+                      <span class="quantity-addtocart cart-heading addtocart-column">Qty</span>
                     </div>
                     <div class="allcartitems">
                     </div>
