--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <nav id="menu_nav" class="menu_nav">
                     <button id="pizza_button" class="button1 sub_item menu_nav_button">Pizza</button>
                     <button id="pasta_button" class="button1 sub_item menu_nav_button">Pasta</button>
-                    <button id="sides_button" class="button1 sub_item menu_nav_button">Sides</button>
+                    <button id="sides_button" class="button1 sub_item menu_nav_button">Salads</button>
                     <button id="drinks_button" class="button1 sub_item menu_nav_button">Drinks</button>
                     <button id="meals_button" class="button1 sub_item menu_nav_button">Meals</button>
                 </nav>
@@ -104,7 +104,7 @@
                 </section>
 
 
-<section id="pasta" class="order_item">
+                <section id="pasta" class="order_item">
 
                     <h2>Pasta</h2>
 
@@ -178,7 +178,7 @@
 
                 <section id="sides" class="order_item">
 
-                    <h2>Sides</h2>
+                    <h2>Salads</h2>
 
                     <div id="" class="menu">
                     </div>
