--- a/index.html
+++ b/index.html
@@ -181,6 +181,69 @@
                     <h2>Salads</h2>
 
                     <div id="" class="menu">
+
+                      <div class="cardItems">
+
+                        <div id="menu_item" class="menu_item">
+                          <div class="food_item">
+                            <img src="images/insalata.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <span class="food-details card_component">
+                              <span class="foodname foodtitle">Insalata Di Pollo</span><br><br>Gently poached Chicken
+                               served with mixed lettuce leaves, cherry tomatoes olives, red onions
+                              <span class="foodprice card_component">$24.00</span><br>
+                            </span>
+                            <div class="cardBar cardItem card_component">
+                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div id="menu_item" class="menu_item">
+                          <div class="food_item">
+                            <img src="images/caesar.png" alt="Pizza-Image" class="cardImage cardItem">
+                            <span class="food-details card_component">
+                              <span class="foodname foodtitle">Caesar Salad</span><br><br>ll the usual suspects including Cos lettuce,
+                              Bacon and house-made Croutons,topped off with a drizzling of Caesar dressing, poached Egg, Anchovies and Parmesan.<br>
+                              <strong>Available for delivery and Pick up</strong><br><br>
+                              <span class="foodprice card_component">$22.00</span><br>
+                            </span>
+                            <div class="cardBar cardItem card_component">
+                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div id="menu_item" class="menu_item">
+                          <div class="food_item">
+                            <img src="images/vegetariano.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <span class="food-details card_component">
+                              <span class="foodname foodtitle">Tutto Vegetariano</span><br><br>Roasted Zucchini and Eggplant, mixed leaf salad with
+                               pine nuts and balsamic vinaigrette.<br>
+                              <strong>Available for Pick up only</strong><br><br>
+                              <span class="foodprice card_component">$22.00</span><br>
+                            </span>
+                            <div class="cardBar cardItem card_component">
+                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div id="menu_item" class="menu_item">
+                          <div class="food_item">
+                            <img src="images/vegetariano.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <span class="food-details card_component">
+                              <span class="foodname foodtitle">Garden Salad</span><br><br>Mixed lettuce leaves with cherry tomatoes, capsicum, celery, red onion, carrot, olives.<br>
+                              <strong>Available for Pick up Only</strong><br><br>
+                              <span class="foodprice card_component">$15.00</span><br>
+                            </span>
+                            <div class="cardBar cardItem card_component">
+                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                            </div>
+                          </div>
+                        </div>
+
+                      </div>
+
                     </div>
                 </section>
 
