Edited the add to cart buttons and added a required image to fix alignment issues

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/hawaiyanpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/hawaiyanpizza.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
                               <span class="foodname foodtitle">Hawaiyan Pizza</span><br><br>Tomato Base with Ham, Pineappple and Mozzarella<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
@@ -73,7 +73,7 @@
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/bbqpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/bbqpizza.jpg" alt="bbqpizza-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
                               <span class="foodname foodtitle">BBQ Chicken Pizza</span><br><br>BBQ Base with Chicken and Mozarella<br>
                               <strong>Available for Pick up only</strong><br><br>
@@ -87,7 +87,7 @@
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/prawnpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/prawnpizza.jpg" alt="prawnpizza-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
                               <span class="foodname foodtitle">Garlic Prawn Pizza</span><br><br>Garlic Butter Base, prawns, fetta, shallots, aioli and Mozarella<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
@@ -114,7 +114,7 @@
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/spaghettibolognese.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/spaghettibolognese.jpg" alt="spaghettibolognese-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
                               <span class="foodname foodtitle">Spaghetti Alla Bolognese</span><br><br>Traditional slow
                               braised Ragu of Beef, Soffritto, tomatoes, and herbs<br>
@@ -129,7 +129,7 @@
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/spaghetticarbonara.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/spaghetticarbonara.jpg" alt="spaghetticarbonara-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
                               <span class="foodname foodtitle">Spaghetti Alla Carbonara</span><br><br>Creamy sauce of Bacon, Egg and Cheese.<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
@@ -143,7 +143,7 @@
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/ravioli.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/ravioli.jpg" alt="ravioli-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
                               <span class="foodname foodtitle">Ravioli</span><br><br>Pillows of meat filled with pasta topped
                                with our house-made Napoli, cream and Parmesan sauce.<br>
@@ -158,7 +158,7 @@
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/lasangne.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/lasangne.jpg" alt="lasangne-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
                               <span class="foodname foodtitle">Lasagne</span><br><br>Traditional Italian dish of stacked layers of pasta alternated with our rich Beef Ragu,
                                Bechamel sauce and Cheeses served with our a Garden Salad.<br>
@@ -193,7 +193,7 @@
                               <span class="foodprice card_component">$24.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -208,7 +208,7 @@
                               <span class="foodprice card_component">$22.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
@@ -223,21 +223,21 @@
                               <span class="foodprice card_component">$22.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/vegetariano.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/garden.jpg" alt="Pizza-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
                               <span class="foodname foodtitle">Garden Salad</span><br><br>Mixed lettuce leaves with cherry tomatoes, capsicum, celery, red onion, carrot, olives.<br>
                               <strong>Available for Pick up Only</strong><br><br>
                               <span class="foodprice card_component">$15.00</span><br>
                             </span>
                             <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add To Cart</button>
+                              <button class="addtocart-btn" type="button">Add</button>
                             </div>
                           </div>
                         </div>
