Changed the layout of the menu items, making them more user-friendly!

--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
                               <span class="foodname foodtitle">Hawaiyan Pizza</span><br><br>Tomato Base with Ham, Pineappple and Mozzarella<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$20.00</span><br>
+                            <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
@@ -64,10 +62,8 @@
                               <span class="foodname foodtitle">Pepperoni Pizza</span><br><br>Tomato Base with Pepperoni and Mozarella<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$20.00</span><br>
+                            <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
@@ -78,10 +74,8 @@
                               <span class="foodname foodtitle">BBQ Chicken Pizza</span><br><br>BBQ Base with Chicken and Mozarella<br>
                               <strong>Available for Pick up only</strong><br><br>
                               <span class="foodprice card_component">$20.00</span><br>
+                            <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
@@ -92,10 +86,8 @@
                               <span class="foodname foodtitle">Garlic Prawn Pizza</span><br><br>Garlic Butter Base, prawns, fetta, shallots, aioli and Mozarella<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$24.00</span><br>
+                            <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
@@ -120,10 +112,8 @@
                               braised Ragu of Beef, Soffritto, tomatoes, and herbs<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$19.00</span><br>
+                              <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
@@ -134,10 +124,8 @@
                               <span class="foodname foodtitle">Spaghetti Alla Carbonara</span><br><br>Creamy sauce of Bacon, Egg and Cheese.<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$22.00</span><br>
+                            <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
@@ -149,10 +137,8 @@
                                with our house-made Napoli, cream and Parmesan sauce.<br>
                               <strong>Available for delivery and Pick up only</strong><br><br>
                               <span class="foodprice card_component">$22.00</span><br>
+                            <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
@@ -164,10 +150,8 @@
                                Bechamel sauce and Cheeses served with our a Garden Salad.<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$25.00</span><br>
+                            <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
@@ -210,7 +194,7 @@
 
                   <div class="cart_summary">
                     <h2 class="cart-main-heading">CART</h2>
-                    <button id="view_cart" class="button1">View/Hide Cart</button>
+                    <button id="view_cart" class="button1 view_cart">View/Hide Cart</button>
                   </div>
 
                   <div id="cart_contents" class="cart_contents">
