Editing the footer

--- a/index.html
+++ b/index.html
@@ -353,7 +353,13 @@
 
 
             </div>
-
+            <footer class = "container">
+                <ul>
+                    <li><a href=https://www.facebook.com/fanniebaysuperpizza/><i class = "fab fa-facebook-f"></i></a></li>
+                    <li><a href="https://twitter.com/"><i class = "fab fa-twitter"></i></a></li>
+                    <li><a href ="https://www.instagram.com/"><i class = "fab fa-instagram"></i></a></li>
+                </ul>
+            </footer>
         </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
