Adding new items

--- a/index.html
+++ b/index.html
@@ -342,6 +342,13 @@
                     <li><a href=https://www.facebook.com/fanniebaysuperpizza/><i class = "fab fa-facebook-f"></i></a></li>
                     <li><a href="https://twitter.com/"><i class = "fab fa-twitter"></i></a></li>
                     <li><a href ="https://www.instagram.com/"><i class = "fab fa-instagram"></i></a></li>
+                    <li><a href = "https://www.google.com.au/"><i class = "fab fa-google"></i></a></li>
+                    <li><a href = "https://www.youtube.com/"></a><i class = "fab fa-youtube"></i></a></li>
+                    <li><a href = "https://fanniebaysuperpizza.com/"></a><i class = "fas fa-envelope"></i></li>
+                    <br>
+                    <p class="footer1">
+                        <br>© 2020 FanniePizza
+                        <a href="#privacypolicy">| Privacy Policy</a></p>
                 </ul>
             </footer>
         </div>
