--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Online Order</title>
         <meta name="viewport" content="width=device-width initial-scale = 1">
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     </head>
     <body>
         <div class="order_parent">
