Correct the the <a> tag code

--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
                 <button id="confirmation_back_button" class="button1 confirmation_time">Back</button>
                 <button id="confirmation_next_button" class="button1 confirmation_time">Next</button>
 
-
             </div>
+
             <footer class = "container">
                 <ul>
                     <li><a href=https://www.facebook.com/fanniebaysuperpizza/><i class = "fab fa-facebook-f"></i></a></li>
@@ -349,7 +349,7 @@
                     <li><a href = "https://fanniebaysuperpizza.com/"></a><i class = "fas fa-envelope"></i></li>
                     <br>
                     <p class="footer1">
-                        <br>© 2020 FanniePizza
+                        <br>© 2020 <a href ="https://fanniebaysuperpizza.com/">FanniePizza</a>
                         <a href="#privacypolicy">| Privacy Policy</a></p>
                 </ul>
             </footer>
