Making changes on some tags to deduce the mix with other tag

--- a/index.html
+++ b/index.html
@@ -340,8 +340,11 @@
             </div>
 
             <footer class = "container">
-                <ul>
-                    <li><a href=https://www.facebook.com/fanniebaysuperpizza/><i class = "fab fa-facebook-f"></i></a></li>
+                <ul class = "effect">
+                    <li><a href="https://www.facebook.com/fanniebaysuperpizza/"><i
+                            class =
+                                                                                                 "fab
+                      fa-facebook-f"></i></a></li>
                     <li><a href="https://twitter.com/"><i class = "fab fa-twitter"></i></a></li>
                     <li><a href ="https://www.instagram.com/"><i class = "fab fa-instagram"></i></a></li>
                     <li><a href = "https://www.google.com.au/"><i class = "fab fa-google"></i></a></li>
