--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles/style.css">
@@ -351,10 +351,12 @@
                     <li><a href = "https://www.youtube.com/"></a><i class = "fab fa-youtube"></i></a></li>
                     <li><a href = "https://fanniebaysuperpizza.com/"></a><i class = "fas fa-envelope"></i></li>
                     <br>
+
+                </ul>
                     <p class="footer1">
                         <br>© 2020 <a href ="https://fanniebaysuperpizza.com/">FanniePizza</a>
                         <a href="#privacypolicy">| Privacy Policy</a></p>
-                </ul>
+
             </footer>
         </div>
     </body>
