correct some class name and avoid the dublicate

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             </div>
 
             <footer class = "container">
-                <ul class = "effect">
+                <ul class = "dec">
                     <li><a href="https://www.facebook.com/fanniebaysuperpizza/"><i
                             class =
                                                                                                  "fab
