Fixed view cart button It wasn't showing properly brfore

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
                   <div class="cart_summary">
                     <h2 class="cart-main-heading">CART</h2>
-                    <button id="view_cart" class="button1 view_cart">View/Hide Cart</button>
+                    <button id="view_cart" class="button1 ">View/Hide Cart</button>
                   </div>
 
                   <div id="cart_contents" class="cart_contents">
