Created new classes elements in the  footer to remove clashes between styles in main navigation bar items.

--- a/index.html
+++ b/index.html
@@ -341,21 +341,19 @@
 
             <footer class = "container">
                 <ul class = "dec">
-                    <li><a href="https://www.facebook.com/fanniebaysuperpizza/"><i
-                            class =
-                                                                                                 "fab
-                      fa-facebook-f"></i></a></li>
-                    <li><a href="https://twitter.com/"><i class = "fab fa-twitter"></i></a></li>
-                    <li><a href ="https://www.instagram.com/"><i class = "fab fa-instagram"></i></a></li>
-                    <li><a href = "https://www.google.com.au/"><i class = "fab fa-google"></i></a></li>
-                    <li><a href = "https://www.youtube.com/"></a><i class = "fab fa-youtube"></i></a></li>
-                    <li><a href = "https://fanniebaysuperpizza.com/"></a><i class = "fas fa-envelope"></i></li>
+                    <li class="footeritem"><a href="https://www.facebook.com/fanniebaysuperpizza/" class="footericon"><i class = "fab fa-facebook-f"></i></a></li>
+                    <li class="footeritem"><a href="https://twitter.com/" class="footericon"><i class = "fab fa-twitter "></i></a></li>
+                    <li class="footeritem"><a href ="https://www.instagram.com/" class="footericon"><i class = "fab fa-instagram"></i></a></li>
+                    <li class="footeritem"><a href = "https://www.google.com.au/" class="footericon"><i class = "fab fa-google"></i></a></li>
+                    <li class="footeritem"><a href = "https://www.youtube.com/" class="footericon"><i class = "fab fa-youtube"></i></a></li>
+                    <li class="footeritem"><a href = "https://fanniebaysuperpizza.com/" class="footericon"><i class = "fas fa-envelope"></i></a></li>
                     <br>
 
                 </ul>
                     <p class="footer1">
-                        <br>© 2020 <a href ="https://fanniebaysuperpizza.com/">FanniePizza</a>
-                        <a href="#privacypolicy">| Privacy Policy</a></p>
+                        <br>© 2020 <a href ="https://fanniebaysuperpizza.com/" class="footerbottom">FanniePizza</a>
+                        <a href="#privacypolicy" class="footerbottom">| Privacy Policy</a>
+                    </p>
 
             </footer>
         </div>
