Removed copyright symbol from the footer because of compliance issues

--- a/index.html
+++ b/index.html
@@ -346,11 +346,10 @@
                     <li class="footeritem"><a href = "https://www.google.com.au/" class="footericon"><i class = "fab fa-google"></i></a></li>
                     <li class="footeritem"><a href = "https://www.youtube.com/" class="footericon"><i class = "fab fa-youtube"></i></a></li>
                 </ul>
-                    <p class="footer1">
-                        <br>© 2020 <a href ="https://fanniebaysuperpizza.com/" class="footerbottom">FanniePizza</a>
-                        <a href="#privacypolicy" class="footerbottom">| Privacy Policy</a>
-                    </p>
-
+                    <div class="footer1">
+                      <a href ="https://fanniebaysuperpizza.com/" class="footerbottom">FanniePizza</a>
+                      <a href="#privacypolicy" class="footerbottom">| Privacy Policy</a>
+                    </div>
             </footer>
         </div>
     </body>
