Changed order confirmation text, and deleted duplicate of stylesheet.

--- a/index.html
+++ b/index.html
@@ -320,9 +320,11 @@
             </article>
 
             <article id="confirmation" class="confirmation">
-                <h2>Order Confirmation</h2>
+                <h1>Order Confirmation</h1>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non accusamus repellat voluptatibus possimus! Pariatur suscipit optio veritatis ea architecto fugit aut fuga enim magnam quis, soluta beatae modi dignissimos quaerat?
+                    Thank you for shopping with us,<br>
+                    Your fresh and fluffy should be in the oven shortly. <br><br>
+                    Please pickup within 15 minutes to enjoy a fresh and hot eating experience.
                 </p>
             </article>
 
